...
        text={leftText}
        icon={leftIcon}
        iconColor={leftIconColor}
        accessibilityLabel={
          leftIconAccessibilityLabel ?? (leftIcon === "chevron-left" ? translate("common:back") : undefined)
        }
        testID={leftIcon === "chevron-left" ? "navigation.back" : undefined}
        onPress={onLeftPress}
        txOptions={leftTxOptions}
        backgroundColor={backgroundColor}
        ActionComponent={LeftActionComponent}
      />

...
